--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.2.4",
     "vue-template-compiler": "^2.6.14"
   }
 }
